--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,8 +6,8 @@ set(CMAKE_CXX_STANDARD 17)
 find_program(CPP_CHECK NAMES cppcheck)
 if(CPP_CHECK)
     add_custom_target(run_cppcheck
-        COMMAND ${CPP_CHECK} --enable=all --inconclusive --force ${CMAKE_SOURCE_DIR}
-        WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+        COMMAND ${CPP_CHECK} --enable=all --suppress=missingIncludeSystem --inconclusive --std=c++17 --force "${CMAKE_SOURCE_DIR}/src"
+        WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}/src"
     )
 endif()
 
