feat: windows compilation

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -12,20 +12,16 @@ FROM mcr.microsoft.com/devcontainers/base:${DEB_VERSION}
 
 ARG TARGETARCH
 ARG DEB_VERSION
-ARG LLVM_VERSION
 
 # +-----------------------------+
 # | PRE-REQUISITE/INIT PACKAGES |
 # +-----------------------------+
 
 # Install dependencies
-RUN --mount=type=cache,id=apt-lib,target=/var/lib/apt,sharing=locked \
-    --mount=type=cache,id=debconf,target=/var/cache/debconf,sharing=locked \
+RUN \
     apt-get update
 
-RUN --mount=type=cache,id=apt-cache,target=/var/cache/apt/archives,sharing=locked \
-    --mount=type=cache,id=apt-lib,target=/var/lib/apt,sharing=locked \
-    --mount=type=cache,id=debconf,target=/var/cache/debconf,sharing=locked \
+RUN \
     apt-get install -y --no-install-recommends \
     locales  \
     && localedef -i en_US -c -f UTF-8 -A /usr/share/locale/locale.alias en_US.UTF-8
@@ -40,17 +36,13 @@ RUN --mount=type=cache,id=apt-lib,target=/var/lib/apt,sharing=locked \
     apt-get update
 
 # Install dependencies
-RUN --mount=type=cache,id=apt-cache,target=/var/cache/apt/archives,sharing=locked \
-    --mount=type=cache,id=apt-lib,target=/var/lib/apt,sharing=locked \
-    --mount=type=cache,id=debconf,target=/var/cache/debconf,sharing=locked \
+RUN \
     apt-get install -y --no-install-recommends \
     gnupg2 \
     ca-certificates \
     software-properties-common \
     cppcheck \
-    valgrind \
     ccache \
-    cmake \
     git \
     nano \
     jq \
@@ -69,23 +61,7 @@ RUN --mount=type=cache,id=apt-cache,target=/var/cache/apt/archives,sharing=locke
     pkg-config \
     bash-completion \
     aria2 \
-    mono-complete
-
-# # +-----------------------------+
-# # | CMake                       |
-# # +-----------------------------+
-
-ARG CMAKE_ARCH=${TARGETARCH}
-ARG CMAKE_ARCH=${CMAKE_ARCH/arm64/'linux-aarch64'}
-ARG CMAKE_ARCH=${CMAKE_ARCH/amd64/'linux-x86_64'}
-
-RUN version="$(curl -s https://api.github.com/repos/Kitware/CMake/releases/latest | jq -r '.tag_name' | cut -c 2-)"; echo "Latest Version: ${version}" \
-    && url="https://github.com/Kitware/CMake/releases/download/v${version}/cmake-${version}-${CMAKE_ARCH}.sh"; echo "Download URL: ${url}" \
-    && curl -fsSL "${url}" -o "cmake-${version}-${CMAKE_ARCH}.sh" \
-    && mkdir /opt/cmake \
-    && sh "cmake-${version}-${CMAKE_ARCH}.sh" --prefix=/opt/cmake --skip-license \
-    && ln -s /opt/cmake/bin/cmake /usr/local/bin/cmake \
-    && rm -rf "cmake-${version}-${CMAKE_ARCH}.sh"
+    xxhash
 
 # +-----------------------------+
 # | LLVM                        |
@@ -93,20 +69,14 @@ RUN version="$(curl -s https://api.github.com/repos/Kitware/CMake/releases/lates
 
 ARG LLVM_VERSION="19"
 
-RUN --mount=type=cache,id=apt-lib,target=/var/lib/apt,sharing=locked \
-    --mount=type=cache,id=debconf,target=/var/cache/debconf,sharing=locked \
-    apt-get update
-
 # Add LLVM repository
-RUN --mount=type=cache,id=apt-cache,target=/var/cache/apt/archives,sharing=locked \
-    --mount=type=cache,id=apt-lib,target=/var/lib/apt,sharing=locked \
-    --mount=type=cache,id=debconf,target=/var/cache/debconf,sharing=locked \
+RUN \
     echo "deb http://apt.llvm.org/${DEB_VERSION}/ llvm-toolchain-bookworm-${LLVM_VERSION} main" > /etc/apt/sources.list.d/llvm.list \
     && echo "deb-src http://apt.llvm.org/${DEB_VERSION}/ llvm-toolchain-bookworm-${LLVM_VERSION} main" >> /etc/apt/sources.list.d/llvm.list \
     && curl -sSL https://apt.llvm.org/llvm-snapshot.gpg.key | apt-key add - \
+    && apt-get update \
     && apt-get install -y --no-install-recommends \
     # LLVM \
-    libllvm-19-ocaml-dev \
     libllvm19 \
     llvm-19 \
     llvm-19-dev \
@@ -128,8 +98,6 @@ RUN --mount=type=cache,id=apt-cache,target=/var/cache/apt/archives,sharing=locke
     libclang-rt-19-dev \
     # polly \
     libpolly-19-dev \
-    # libfuzzer \
-    libfuzzer-19-dev \
     # lldb \
     lldb-19 \
     # lld (linker) \
@@ -137,20 +105,11 @@ RUN --mount=type=cache,id=apt-cache,target=/var/cache/apt/archives,sharing=locke
     # libc++ \
     libc++-19-dev \
     libc++abi-19-dev \
-    # OpenMP \
-    libomp-19-dev \
     # libclc \
     libclc-19-dev \
-    # libunwind \
-    libunwind-19-dev \
-    # mlir \
-    libmlir-19-dev \
-    mlir-19-tools \
     # bolt \
     libbolt-19-dev \
     bolt-19 \
-    # flang \
-    flang-19 \
     # wasm support \
     libclang-rt-19-dev-wasm32 \
     libclang-rt-19-dev-wasm64 \
@@ -161,9 +120,7 @@ RUN --mount=type=cache,id=apt-cache,target=/var/cache/apt/archives,sharing=locke
 # | OpenGL                      |
 # +-----------------------------+
 
-RUN --mount=type=cache,id=apt-cache,target=/var/cache/apt/archives,sharing=locked \
-    --mount=type=cache,id=apt-lib,target=/var/lib/apt,sharing=locked \
-    --mount=type=cache,id=debconf,target=/var/cache/debconf,sharing=locked \
+RUN \
     apt-get install -y --no-install-recommends \
     libxinerama-dev \
     libxcursor-dev \
@@ -180,13 +137,7 @@ RUN --mount=type=cache,id=apt-cache,target=/var/cache/apt/archives,sharing=locke
 ENV TERM=xterm-256color
 ENV ZSH_THEME=agnoster
 
-RUN --mount=type=cache,id=apt-lib,target=/var/lib/apt,sharing=locked \
-    --mount=type=cache,id=debconf,target=/var/cache/debconf,sharing=locked \
-    apt-get update
-
-RUN --mount=type=cache,id=apt-cache,target=/var/cache/apt/archives,sharing=locked \
-    --mount=type=cache,id=apt-lib,target=/var/lib/apt,sharing=locked \
-    --mount=type=cache,id=debconf,target=/var/cache/debconf,sharing=locked \
+RUN \
     rm -rf ~/.oh-my-zsh/ \
     && apt-get install -y --no-install-recommends \
     zsh \
@@ -214,12 +165,20 @@ RUN sh -c "$(curl -fsSL https://starship.rs/install.sh)" -- --yes && \
 # | vcpkg                       |
 # +-----------------------------+
 
-ENV VCPKG_ROOT=/opt/vcpkg
-ENV VCPKG_INSTALLATION_ROOT=/opt/vcpkg
-ENV VCPKG_TRIPLET=arm64-linux
+ARG VCPKG_ROOT="/opt/vcpkg"
+ENV PATH="${PATH}:${VCPKG_ROOT}"
+
+ARG VCPKG_TRIPLET=${TARGETARCH}
+ARG VCPKG_TRIPLET=${VCPKG_TRIPLET/arm64/'arm64-linux'}
+ARG VCPKG_TRIPLET=${VCPKG_TRIPLET/amd64/'x64-linux'}
+ENV VCPKG_TRIPLET="${VCPKG_TRIPLET}"
+
+ENV VCPKG_ROOT="${VCPKG_ROOT}"
+ENV VCPKG_INSTALLATION_ROOT="${VCPKG_ROOT}"
+
+# TODO: check for crossplatform compilation
 ENV VCPKG_FORCE_SYSTEM_BINARIES=1
 ENV VCPKG_USE_SYSTEM_BINARIES=1
-ENV PATH="${PATH}:${VCPKG_ROOT}"
 
 RUN git clone \
     -c core.eol=lf \
@@ -230,6 +189,88 @@ RUN git clone \
     https://github.com/microsoft/vcpkg "${VCPKG_ROOT}" \
     && "${VCPKG_ROOT}"/bootstrap-vcpkg.sh -disableMetrics \
     && "${VCPKG_ROOT}"/vcpkg integrate install
+
+
+# # +-----------------------------+
+# # | CMake                       |
+# # +-----------------------------+
+
+ARG CMAKE_VERSION="4.0.2"
+ARG CMAKE_ROOT="/opt/cmake"
+
+ARG CMAKE_ARCH=${TARGETARCH}
+ARG CMAKE_ARCH=${CMAKE_ARCH/arm64/'linux-aarch64'}
+ARG CMAKE_ARCH=${CMAKE_ARCH/amd64/'linux-x86_64'}
+
+ARG CMAKE_CHECKSUM=${TARGETARCH}
+ARG CMAKE_CHECKSUM=${CMAKE_CHECKSUM/arm64/'b83ce5279133fd8863c6bc2f0afec4eb'}
+ARG CMAKE_CHECKSUM=${CMAKE_CHECKSUM/amd64/''}
+
+RUN --mount=type=cache,id=cmake-${CMAKE_VERSION}-${CMAKE_ARCH},target=/cache${CMAKE_ROOT},sharing=locked \
+    [ "${CMAKE_CHECKSUM}" = "$(find /cache${CMAKE_ROOT} -type f -exec xxhsum -H128 {} + | sort | xxhsum -H128 | awk '{print $1}')" ] \
+    && { \
+    echo 'Move cached version to destination' \
+    && mkdir -p "${CMAKE_ROOT}" \
+    && echo 'Copy new version from cache' \
+    && cp -r "/cache${CMAKE_ROOT}"/* "${CMAKE_ROOT}" \
+    && ln -sf "${CMAKE_ROOT}/bin/ctest" '/usr/local/bin/ctest' \
+    && ln -sf "${CMAKE_ROOT}/bin/cmake" '/usr/local/bin/cmake'; \
+    } \
+    || { \
+    echo 'Clean cache folder' \
+    && rm -rf "/cache${CMAKE_ROOT}"/* \
+    && echo 'Download new version' \
+    && curl -fsSL "https://github.com/Kitware/CMake/releases/download/v${CMAKE_VERSION}/cmake-${CMAKE_VERSION}-${CMAKE_ARCH}.sh" \
+    -o "cmake.sh" \
+    && echo 'Install new version' \
+    && mkdir -p "${CMAKE_ROOT}" \
+    && sh "cmake.sh" --prefix="${CMAKE_ROOT}" --skip-license \
+    && ln -sf "${CMAKE_ROOT}/bin/ctest" '/usr/local/bin/ctest' \
+    && ln -sf "${CMAKE_ROOT}/bin/cmake" '/usr/local/bin/cmake' \
+    && rm -rf "cmake.sh" \
+    && echo 'Copy new version to cache' \
+    && cp -r "${CMAKE_ROOT}"/* "/cache${CMAKE_ROOT}" \
+    && find "/cache${CMAKE_ROOT}" -type f -exec xxhsum -H128 {} + | sort | xxhsum -H128 | awk '{print $1}'; \
+    }
+
+# +-----------------------------+
+# | LLVM-MinGW                  |
+# +-----------------------------+
+
+ARG LLVM_MINGV_VERSION="20250528"
+ARG MINGW_ROOT="/opt/llvm-mingw"
+
+ARG MINGW_ARCH=${TARGETARCH}
+ARG MINGW_ARCH=${MINGW_ARCH/arm64/'aarch64'}
+ARG MINGW_ARCH=${MINGW_ARCH/amd64/'x86_64'}
+
+ARG MINGW_CHECKSUM=${TARGETARCH}
+ARG MINGW_CHECKSUM=${MINGW_CHECKSUM/arm64/'56e757737e51fade97e1b2b025b2c1e3'}
+ARG MINGW_CHECKSUM=${MINGW_CHECKSUM/amd64/''}
+
+
+# https://github.com/mstorsjo/llvm-mingw/releases/download/20250514/llvm-mingw-20250514-ucrt-ubuntu-22.04-x86_64.tar.xz
+RUN --mount=type=cache,id=llvm-mingw-${LLVM_MINGV_VERSION}-${MINGW_ARCH},target=/cache${MINGW_ROOT},sharing=locked \
+    [ "${MINGW_CHECKSUM}" = "$(find /cache${MINGW_ROOT} -type f -exec xxhsum -H128 {} + | sort | xxhsum -H128 | awk '{print $1}')" ] \
+    && { \
+    echo 'Move cached version to destination' \
+    && mkdir -p "${MINGW_ROOT}" \
+    && cp -r "/cache${MINGW_ROOT}/llvm-mingw-${LLVM_MINGV_VERSION}-ucrt-ubuntu-22.04-${MINGW_ARCH}"/* "${MINGW_ROOT}"; \
+    } \
+    || { \
+    echo 'Clean cache folder' \
+    && rm -rf "/cache${MINGW_ROOT}"/* \
+    && echo 'Download new version' \
+    && curl -fsSL "https://github.com/mstorsjo/llvm-mingw/releases/download/${LLVM_MINGV_VERSION}/llvm-mingw-${LLVM_MINGV_VERSION}-ucrt-ubuntu-22.04-${MINGW_ARCH}.tar.xz" \
+    -o "llvm-mingw.tar.xz" \
+    && echo 'Extract new version to cache' \
+    && tar -xf "llvm-mingw.tar.xz" -C "/cache${MINGW_ROOT}" \
+    && rm -rf "llvm-mingw.tar.xz" \
+    && find "/cache${MINGW_ROOT}/llvm-mingw-${LLVM_MINGV_VERSION}-ucrt-ubuntu-22.04-${MINGW_ARCH}" -type f -exec xxhsum -H128 {} + | sort | xxhsum -H128 | awk '{print $1}' \
+    && echo 'Move new version to destination' \
+    && mkdir -p "${MINGW_ROOT}" \
+    && cp -r "/cache${MINGW_ROOT}/llvm-mingw-${LLVM_MINGV_VERSION}-ucrt-ubuntu-22.04-${MINGW_ARCH}"/* "${MINGW_ROOT}"; \
+    }
 
 # # +-----------------------------+
 # # | CLEANUP                     |
